frame/support/test/tests/decl_module_ui/reserved_keyword_two_times_on_initialize.stderr
error: `on_initialize` can only be passed once as input.
  --> $DIR/reserved_keyword_two_times_on_initialize.rs:1:1
   |
1  | / frame_support::decl_module! {
2  | |     pub struct Module<T: Trait> for enum Call where origin: T::Origin {
3  | |         fn on_initialize() -> Weight {
4  | |             0
...  |
10 | |     }
11 | | }
   | |_^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> $DIR/reserved_keyword_two_times_on_initialize.rs:1:1
   |
1  | / frame_support::decl_module! {
2  | |     pub struct Module<T: Trait> for enum Call where origin: T::Origin {
3  | |         fn on_initialize() -> Weight {
4  | |             0
...  |
10 | |     }
11 | | }
   | |_^ consider adding a `main` function to `$DIR/tests/decl_module_ui/reserved_keyword_two_times_on_initialize.rs`
